--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://example.com"
+baseURL = "https://rishabhsaini.github.io"
 
 # set your your own ga token here.
 googleAnalytics = "UA/G-123123-12"
